test/bad-reassignment.stderr
Error: Line 3, col 1:
  2 | a := 2
> 3 | a := "hello"
      ^~~~~~~~~~~~
  4 | 

Assignment to different type